# mysql

./: CMakeLists.txt  main.cpp
mysql-connector/: INFO_BIN
